# lp-sidemafy

./: CMakeLists.txt  Doxyfile  GerenciadorMusica.cpp  GerenciadorMusica.h  GerenciadorPlaylist.h  LinkedList.cpp  LinkedList.h  Menu.cpp  Menu.h  Musica.cpp  Musica.h  Node.cpp  Node.h  Playlist.cpp  Playlist.h  README.md  main  main.cpp
docs/html/: GerenciadorMusica_8h.html  GerenciadorMusica_8h__incl.dot  GerenciadorMusica_8h_source.html  GerenciadorPlaylist_8h.html  GerenciadorPlaylist_8h__incl.dot  GerenciadorPlaylist_8h_source.html  LinkedList_8h.html  LinkedList_8h__dep__incl.dot  LinkedList_8h__incl.dot  LinkedList_8h_source.html  Menu_8h.html  Menu_8h__dep__incl.dot  Menu_8h__incl.dot  Menu_8h_source.html  Musica_8h.html  Musica_8h__dep__incl.dot  Musica_8h__incl.dot  Musica_8h_source.html  Node_8h.html  Node_8h__dep__incl.dot  Node_8h_source.html  Playlist_8h.html  Playlist_8h__dep__incl.dot  Playlist_8h__incl.dot  Playlist_8h_source.html  annotated.html  classGerenciadorMusica-members.html  classGerenciadorMusica.html  classGerenciadorMusica__coll__graph.dot  classGerenciadorPlaylist-members.html  classGerenciadorPlaylist.html  classGerenciadorPlaylist__coll__graph.dot  classLinkedList-members.html  classLinkedList.html  classMenu-members.html  classMenu.html  classMusica-members.html  (+35 more)
include/: Constants.h  GerenciadorMusica.h  GerenciadorPlaylist.h  LinkedList.h  Menu.h  Menus.h  Music.h  Musica.h  Node.h  Playlist.h  PlaylistsManager.h  Sidemafy.h  SongsManager.h
src/: GerenciadorMusica.cpp  GerenciadorPlaylist.cpp  LinkedList.cpp  Node.cpp  Playlist.cpp
(+90 files in other folders)
